updated with records and 0422, 0418

--- a/data_peek.ipynb
+++ b/data_peek.ipynb
@@ -2,75 +2,104 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ths_contract_multiplier\n",
-      "<class 'str'>      131054\n",
-      "<class 'int'>        3830\n",
-      "<class 'float'>        18\n",
-      "Name: count, dtype: int64\n",
-      "0         20\n",
-      "1         20\n",
-      "2         20\n",
-      "3         20\n",
-      "4         20\n",
-      "          ..\n",
-      "134897     5\n",
-      "134898     5\n",
-      "134899     5\n",
-      "134900     5\n",
-      "134901     5\n",
-      "Name: ths_contract_multiplier, Length: 134902, dtype: object\n",
-      "ths_contract_multiplier\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/8r/nxvv77y10g556swh249ds84w0000gn/T/ipykernel_38188/3640230858.py:3: DtypeWarning: Columns (0,5,6,7,8) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  data_peek = pd.read_csv('Dataset/combined_data.csv', encoding='utf-8')\n"
+      "/var/folders/8r/nxvv77y10g556swh249ds84w0000gn/T/ipykernel_38672/2963632914.py:4: DtypeWarning: Columns (0,5,6,7,8) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  contract = pd.read_csv('Dataset/combined_data.csv', encoding='utf-8')\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "\n",
-    "data_peek = pd.read_csv('Dataset/combined_data.csv', encoding='utf-8')\n",
-    "column_name = data_peek.columns[5]\n",
-    "print(data_peek[column_name].apply(type).value_counts())\n",
-    "print(data_peek[column_name])\n",
-    "print(column_name)"
+    "contract = pd.read_csv('Dataset/combined_data.csv', encoding='utf-8')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index(['number', 'time', 'thscode', 'ths_future_code_future',\n",
-      "       'ths_mini_chg_price_future', 'ths_contract_multiplier',\n",
-      "       'ths_trade_deposit_future', 'ths_transaction_procedure_rate_future',\n",
-      "       'ths_transaction_procedure_fee_future', 'ths_open_time_day_future',\n",
-      "       'ths_close_time_day_future', 'ths_open_time_night_future',\n",
-      "       'ths_close_time_night_future', 'ths_exchange_name_eng_future',\n",
-      "       'Unnamed: 14', 'thscode_processed', 'ths_future_code_future_processed'],\n",
-      "      dtype='object')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "column_names = data_peek.columns\n",
-    "print(column_names)"
+    "def get_future_data(df, date, code):\n",
+    "    # 读取数据，使用GBK编码\n",
+    "\n",
+    "    # 将日期列转换为datetime类型，以确保可以进行日期比较\n",
+    "    df['time'] = pd.to_datetime(df['time'])\n",
+    "    # 替换'--'为NaN\n",
+    "    df.replace('--', np.nan, inplace=True)\n",
+    "\n",
+    "    # 将输入的日期字符串也转换为datetime类型\n",
+    "    input_date = pd.to_datetime(date)\n",
+    "\n",
+    "    # 筛选符合输入日期和代码的行\n",
+    "    filtered_data = df[(df['time'] == input_date) & (df['ths_future_code_future_processed'] == code)]\n",
+    "\n",
+    "    # 检查筛选结果是否为空\n",
+    "    if filtered_data.empty:\n",
+    "        return \"No data available for the given date and code.\"\n",
+    "\n",
+    "    # 获取所需的列信息，如果'rate'是null，则使用'fee'\n",
+    "    result = filtered_data.apply(lambda row: {\n",
+    "        'code': row['ths_future_code_future_processed'],\n",
+    "        'contract_multiplier': int(row['ths_contract_multiplier']),\n",
+    "        'deposit': float(row['ths_trade_deposit_future']),\n",
+    "        'transactionfee': float(\n",
+    "            row['ths_transaction_procedure_rate_future'] if pd.isna(row['ths_transaction_procedure_rate_future']) or\n",
+    "                                                            row['ths_transaction_procedure_rate_future'] == 0.0 else\n",
+    "            row['ths_transaction_procedure_fee_future']),\n",
+    "\n",
+    "        'opentime': row['ths_open_time_night_future'] if pd.notnull(row['ths_open_time_night_future']) else row[\n",
+    "            'ths_open_time_day_future'],\n",
+    "\n",
+    "    }, axis=1)\n",
+    "\n",
+    "    # 返回结果\n",
+    "    return result.iloc[0]  # 假设每个日期和代码的组合只有一行数据\n",
+    "\n",
+    "def calculate_trade_return(row):\n",
+    "    # 计算基础收益，计算方法为手数 * （收盘价- 开盘价） * 点数\n",
+    "    # 注意需要读取未进行换月连续化的数据进行计算，以提高准确性\n",
+    "    \n",
+    "    row['Return'] = row['Direction'] * (row['Close_Price'] - row['Open_Price']) * (get_future_data(contract,row['Open_Time'],row['Asset'])['contract_multiplier'])\n",
+    "    \n",
+    "    # 判断手续费是固定还是按比例,默认手续费开双边 *2\n",
+    "    if get_future_data(contract,row['Open_Time'],row['Asset'])['transactionfee'] < 1:\n",
+    "        # 如果手续费按比例收，计算方法为（开价+收价）* 点数 * 手数绝对值 * 比例\n",
+    "        commission = ((get_future_data(contract,row['Open_Time'],row['Asset'])['transactionfee'] \n",
+    "                      * get_future_data(contract,row['Open_Time'],row['Asset'])['contract_multiplier'] * (row['Open_Price'] + row['Close_Price']))\n",
+    "                      * abs(row['Direction'])*2)\n",
+    "    else:  # 固定手续费，直接用手续费值 * 手数绝对值 * 2即可\n",
+    "        commission = get_future_data(contract,row['Open_Time'],row['Asset'])['transactionfee'] * 2 * abs(row['Direction'])\n",
+    "    # 最终收益 = 基础收益 - 手续费\n",
+    "    row['Return'] = row['Return'] - commission\n",
+    "    return row"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "signals = pd.read_csv('records/2024-04-22_10-23-38/signals.csv')\n",
+    "df = pd.DataFrame(signals,\n",
+    "                    columns=['Asset', 'Open_Time', 'Open_Price', 'Direction', 'Close_Time', 'Close_Price'])\n",
+    "\n",
+    "# 将平仓时间的格式转化为时间戳\n",
+    "df['Close_Time'] = pd.to_datetime(df['Close_Time'])\n",
+    "\n",
+    "# 按照平仓时间排序， 以平仓时间作为一次交易结束并结算的时间\n",
+    "df = df.sort_values(by='Close_Time')\n",
+    "\n",
+    "# 计算每笔交易的收益（转化单位为人民币，考虑手续费）\n",
+    "df = df.apply(calculate_trade_return, axis=1)"
    ]
   }
  ],
